# rubikscage

./: Cargo.toml  README.md  test_flip.txt  test_rotate.txt
rubikscage/: app.py  main.py
src/: cage.rs  cube.rs  input_player.rs  main.rs  player.rs
src/backend/: cage.rs  mod.rs  player.rs  run.rs
src/cli/: input_player.rs  main.rs
src/frontend/: main.rs  online_player.rs
