[package]
name = "rubikscage"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/backend/mod.rs"

[dependencies]
rocket = { version = "0.5.0", optional = true }
shuttle-rocket = { version = "0.34.0", optional = true }
shuttle-runtime = { version = "0.34.0", optional = true }
tokio = { version = "1.26.0", optional = true }
clap = { version = "4.4.8", features = ["derive"], optional = true}
clap-num = { version = "1.0.2", optional = true }
itertools = "0.12.0"

[features]
frontend = ["rocket", "shuttle-rocket", "shuttle-runtime", "tokio"]
cli = ["clap", "clap-num"]

[[bin]]
name = "frontend"
path = "src/frontend/main.rs"
required-features = ["frontend"]

[[bin]]
name = "cli"
path = "src/cli/main.rs"
required-features = ["cli"]
